# epub-vectorizer

./: .env.example  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/epub_vectorizer/: __about__.py  __init__.py  cli.py  config.py  core.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py
